# ptradutor

./: LICENSE  README.md  pyproject.toml
notebooks/: filter_pipeline.eps  filter_pipeline.ipynb  frmt_translation.ipynb  sankey.ipynb  stats.ipynb
resources/: pt_words.txt
scripts/: format4hf.py  push2hf.py  sankey_data.py  translate.py  translate_mp.py
src/: data.py  main.py  process.py  translator.py  utils.py
tests/: test_data.py  test_process.py  test_utils.py
